--- a/openhis-server/openhis-application/pom.xml
+++ b/openhis-server/openhis-application/pom.xml
@@ -30,6 +30,11 @@
             <artifactId>liteflow-spring-boot-starter</artifactId>
             <version>2.12.4.1</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
 
