封装文言提示

--- a/openhis-server/openhis-application/src/main/resources/application.yml
+++ b/openhis-server/openhis-application/src/main/resources/application.yml
@@ -87,6 +87,10 @@ spring:
         max-active: 8
         # #连接池最大阻塞等待时间（使用负值表示没有限制）
         max-wait: -1ms
+    # 文言
+    messages:
+      basename: i18n/general_message/messages
+      encoding: utf-8
 
 # token配置
 token:
