--- a/openhis-ui-vue3/package.json
+++ b/openhis-ui-vue3/package.json
@@ -21,6 +21,7 @@
     "@vueuse/core": "10.6.1",
     "axios": "0.27.2",
     "echarts": "5.4.3",
+    "element-china-area-data": "^6.1.0",
     "element-plus": "2.4.3",
     "file-saver": "2.0.5",
     "fuse.js": "6.6.2",
@@ -28,7 +29,10 @@
     "jsencrypt": "3.3.2",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
+    "province-city-china": "^8.5.8",
+    "v-region": "^3.3.0",
     "vue": "3.3.9",
+    "vue-area-linkage": "^5.1.0",
     "vue-cropper": "1.1.1",
     "vue-router": "4.2.5"
   },
@@ -37,9 +41,9 @@
     "@vue/compiler-sfc": "3.3.9",
     "sass": "1.69.5",
     "unplugin-auto-import": "0.17.1",
+    "unplugin-vue-setup-extend-plus": "1.0.0",
     "vite": "5.0.4",
     "vite-plugin-compression": "0.5.1",
-    "vite-plugin-svg-icons": "2.0.1",
-    "unplugin-vue-setup-extend-plus": "1.0.0"
+    "vite-plugin-svg-icons": "2.0.1"
   }
 }
