--- a/openhis-ui-vue3/package.json
+++ b/openhis-ui-vue3/package.json
@@ -30,7 +30,9 @@
     "moment": "^2.30.1",
     "nprogress": "0.2.0",
     "pinia": "2.1.7",
+    "pinyin": "^4.0.0-alpha.2",
     "province-city-china": "^8.5.8",
+    "segmentit": "^2.0.3",
     "v-region": "^3.3.0",
     "vue": "3.3.9",
     "vue-area-linkage": "^5.1.0",
