--- a/openhis-ui-vue3/package.json
+++ b/openhis-ui-vue3/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "4.5.0",
     "@vue/compiler-sfc": "3.3.9",
+    "less": "^4.2.2",
     "sass": "1.69.5",
     "unplugin-auto-import": "0.17.1",
     "unplugin-vue-setup-extend-plus": "1.0.0",
